--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ if (viewportmeta) {
                   </div>
                   <div class="design__details">
                     <div class="design__info">Social Media Bounty</div>
-                    <div class="design__text">Use the smart color picker to easily select and apply colors.</div><a class="design__link" href="login.html">Get started<svg class="icon icon-arrow-right">
+                    <div class="design__text">Perform simple social media tasks and win DOGE1 rewards.</div><a class="design__link" href="login.html">Get started<svg class="icon icon-arrow-right">
                         <use xlink:href="img/sprite.svg#icon-arrow-right"></use>
                       </svg></a>
                   </div>
@@ -272,7 +272,7 @@ if (viewportmeta) {
                   </div>
                   <div class="design__details">
                     <div class="design__info">Youtube Bounty</div>
-                    <div class="design__text">Using the Component Builder with your projects.</div><a class="design__link" href="login.html">Get started<svg class="icon icon-arrow-right">
+                    <div class="design__text">Create & Publish  Informative /Promotional Video about Project.</div><a class="design__link" href="login.html">Get started<svg class="icon icon-arrow-right">
                         <use xlink:href="img/sprite.svg#icon-arrow-right"></use>
                       </svg></a>
                   </div>
@@ -283,7 +283,7 @@ if (viewportmeta) {
                   </div>
                   <div class="design__details">
                     <div class="design__info">Article Bounty</div>
-                    <div class="design__text">Deploy your projects more efficiently for web &amp; mobile.</div><a class="design__link" href="login.html">Get started<svg class="icon icon-arrow-right">
+                    <div class="design__text">Create & Publish  Informative /Promotional Articles about Project.</div><a class="design__link" href="login.html">Get started<svg class="icon icon-arrow-right">
                         <use xlink:href="img/sprite.svg#icon-arrow-right"></use>
                       </svg></a>
                   </div>
@@ -294,7 +294,7 @@ if (viewportmeta) {
                   </div>
                   <div class="design__details">
                     <div class="design__info">Meme Bounty</div>
-                    <div class="design__text">Use the smart color picker to easily select and apply colors.</div><a class="design__link" href="login.html">Get started<svg class="icon icon-arrow-right">
+                    <div class="design__text">Create & Publish Funny and Promotional Memes about the token.</div><a class="design__link" href="login.html">Get started<svg class="icon icon-arrow-right">
                         <use xlink:href="img/sprite.svg#icon-arrow-right"></use>
                       </svg></a>
                   </div>
