--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ if (viewportmeta) {
     <div class="page">
       <div class="container">
         <nav class="navbar navbar-expand-md navbar-light navbar_gog">
-          <a class="navbar-brand" href="#"><img src="img/logo.png" /></a>
+          <a class="navbar-brand" href="https://foonlen.github.io/prodex/"><img src="img/logo.png" /></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon" />
           </button>
@@ -51,13 +51,13 @@ if (viewportmeta) {
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="nav navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="https://foonlen.github.io/prodex/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/register">Register</a>
+                <a class="nav-link" href="https://prodexnext.vercel.app/r">Register</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" href="https://prodexnext.vercel.app/">Login</a>
               </li>
               
             </ul>
