--- a/index.html
+++ b/index.html
@@ -51,13 +51,22 @@ if (viewportmeta) {
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="nav navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="https://foonlen.github.io/prodex/">Home</a>
+                <a class="nav-link" href="https://foonlen.github.io/prodex/">Token</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" target="_blank">Whitepaper</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" target="_blank">Community</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" target="_blank">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://prodexnext.vercel.app/">Launch App</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://prodexnext.vercel.app/r">Register</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://prodexnext.vercel.app/">Login</a>
               </li>
               
             </ul>
@@ -72,7 +81,7 @@ if (viewportmeta) {
             <div class="main__control" data-aos="animation-scale-y" data-aos-delay="550">
               <a class="main__link" href="#">
                 <div class="main__icon"><img class="main__pic" src="img/play.svg" alt=""></div>
-                <div class="main__text">Buy DOGE1</div>
+                <div class="main__text">Join Wishlist</div>
               </a>
             </div>
           </div>
